kerberizedprinting (0.1.20080802.1) UNRELEASED; urgency=low

  * Build using -D__DAEMON__ to enable the call to daemon().  This
    make sure it run in the background as a daemon.

 -- Petter Reinholdtsen <pere@debian.org>  Fri,  1 Aug 2008 14:19:05 +0200

kerberizedprinting (0.1.20080801.2) unstable; urgency=low

  * Make sure to depend on smbclient, needed to submit the print jobs.

 -- Petter Reinholdtsen <pere@debian.org>  Fri,  1 Aug 2008 14:19:04 +0200

kerberizedprinting (0.1.20080801.1) unstable; urgency=low

  * Try harder to install CUPS backend with mode 0700.  Make sure
    dh_fixperms to not revert the change.

 -- Petter Reinholdtsen <pere@debian.org>  Fri,  1 Aug 2008 14:01:59 +0200

kerberizedprinting (0.1.20080801) unstable; urgency=low

  * Fix bashism in ksmb script.
  * Make sure to install CUPS backend with mode 0700, to force CUPS to
    run it with root privileges.

 -- Petter Reinholdtsen <pere@debian.org>  Fri,  1 Aug 2008 13:51:08 +0200

kerberizedprinting (0.0.20080801) unstable; urgency=low

  * Install user program in /usr/bin/, not /usr/sbin/.
  * Correct path to sed for Debian.

 -- Petter Reinholdtsen <pere@debian.org>  Fri,  1 Aug 2008 00:14:18 +0200

kerberizedprinting (0.0.20080731) unstable; urgency=low

  * Initial package, repacked to be easier to build.
  * Added missing #include in C code to find prototype for strlen().
  * Added Makefile to make it easier to build.
  * Added Xsession.d script to start the user daemon when Kerberos is
    enabled.

 -- Petter Reinholdtsen <pere@debian.org>  Thu, 31 Jul 2008 23:59:28 +0200